--- a/catalogo/templates/catalogo/products/confirm_delete.html
+++ b/catalogo/templates/catalogo/products/confirm_delete.html
@@ -4,11 +4,12 @@
 
 {% block contenido %}
   <h2>Eliminar producto</h2>
-  <p>¿Seguro que deseas eliminar <strong>{{ object.nombre }}</strong>?</p>
+
+  <p>¿Estás seguro de que quieres eliminar <strong>{{ producto.nombre }}</strong>?</p>
 
   <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Sí, eliminar</button>
-    <a class="btn btn-outline" href="{% url 'product_list' %}">Cancelar</a>
+    <a href="{% url 'product_list' %}" class="btn btn-outline">Cancelar</a>
   </form>
 {% endblock %}
